# QT_DB

./: CMakeLists.txt  main.cpp
